# codex-session-manager

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/desktop/scripts/: captureHistoricalSession.mjs  ensure-relocatable-tauri-target.mjs
apps/desktop/src/: App.tsx  main.tsx  shellLayout.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src-tauri/src/commands/: debug.rs  device.rs  mod.rs  search.rs
apps/desktop/src-tauri/src/state/: app_state.rs  mod.rs  models.rs  search_index.rs
apps/desktop/src/components/: ChatPanel.tsx  Composer.tsx  Sidebar.tsx  chatWindow.ts
apps/desktop/src/domain/: modelCatalog.ts  types.ts
apps/desktop/src/services/: codexApi.ts  eventParser.ts  jsonRpcClient.ts  modelPricing.ts  renderedTranscriptSnapshot.ts  reopenedSessionTranscriptCapture.tsx  tauriBridge.ts
apps/desktop/src/state/: useAppStore.ts
apps/desktop/src/styles/: app.css  globals.css
apps/desktop/src/test/: chatWindow.test.ts  chronologyReplayFixtures.ts  chronologyReplayHarness.ts  codexApi.test.ts  eventParser.test.ts  modelCatalog.test.ts  modelPricing.test.ts  renderedTranscriptSnapshot.test.tsx  reopenedSessionDiagnosticFixtures.ts  shellLayout.test.ts  tauriBridge.test.ts  transcriptEmulation.test.ts  useAppStore.test.ts
docs/: architecture.md  rust-tauri-backend.md
(+2 files in other folders)
