[package]
name = "codex-desktop-host"
version = "0.1.0"
edition = "2021"
description = "Tauri backend host for Codex multi-device desktop app."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
strsim = "0.11"
uuid = { version = "1", features = ["serde", "v4"] }
